// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown should render Markdown in a p tag even for one paragraph 1`] = `

<p class="rsg--para-11">
  pizza
</p>

`;

exports[`Markdown should render Markdown in span in inline mode 1`] = `

<span class="rsg--text-21 rsg--inheritSize-22 rsg--baseColor-26">
  Hello
  <em class="rsg--text-21 rsg--inheritSize-22 rsg--baseColor-26 rsg--em-28">
    world
  </em>
  !
</span>

`;

exports[`Markdown should render Markdown with custom CSS classes 1`] = `

<div>
  <div class="rsg--spacing-13">
    <h1 class="rsg--heading-14 rsg--heading1-15">
      Header
    </h1>
  </div>
  <p class="rsg--para-11">
    Text with
    <em class="rsg--text-21 rsg--inheritSize-22 rsg--baseColor-26 rsg--em-28">
      some
    </em>
    <strong class="rsg--text-21 rsg--inheritSize-22 rsg--baseColor-26 rsg--strong-29">
      formatting
    </strong>
    and a
    <a href="/foo"
       class="rsg--link-12"
    >
      link
    </a>
    .
  </p>
  <p class="rsg--para-11">
    <img alt="Image"
         src="/bar.png"
    >
  </p>
</div>

`;

exports[`Markdown should render a blockquote 1`] = `

<blockquote class="rsg--blockquote-36">
  <p class="rsg--para-11">
    This is a blockquote.
And this is a second line.
  </p>
</blockquote>

`;

exports[`Markdown should render check-lists correctly 1`] = `

<ul class="rsg--list-31">
  <li class="rsg--li-33">
    <input type="checkbox"
           class="rsg--input-2"
           readonly
    >
    list 1
  </li>
  <li class="rsg--li-33">
    <input type="checkbox"
           class="rsg--input-2"
           readonly
    >
    list 2
  </li>
  <li class="rsg--li-33">
    <input type="checkbox"
           class="rsg--input-2"
           checked
           readonly
    >
    list 3
  </li>
</ul>

`;

exports[`Markdown should render code blocks without escaping 1`] = `

<pre class="rsg--pre-34">
  <code class="lang-html rsg--code-35">
    <foo>
    </foo>
  </code>
</pre>

`;

exports[`Markdown should render headings correctly 1`] = `

<div>
  <div class="rsg--spacing-13">
    <h1 class="rsg--heading-14 rsg--heading1-15">
      one
    </h1>
  </div>
  <div class="rsg--spacing-13">
    <h2 class="rsg--heading-14 rsg--heading2-16">
      two
    </h2>
  </div>
  <div class="rsg--spacing-13">
    <h3 class="rsg--heading-14 rsg--heading3-17">
      three
    </h3>
  </div>
  <div class="rsg--spacing-13">
    <h4 class="rsg--heading-14 rsg--heading4-18">
      four
    </h4>
  </div>
  <div class="rsg--spacing-13">
    <h5 class="rsg--heading-14 rsg--heading5-19">
      five
    </h5>
  </div>
  <div class="rsg--spacing-13">
    <h6 class="rsg--heading-14 rsg--heading6-20">
      six
    </h6>
  </div>
</div>

`;

exports[`Markdown should render inline code with escaping 1`] = `

<p class="rsg--para-11">
  Foo
  <code class="rsg--code-35">
    &lt;bar&gt;
  </code>
  baz
</p>

`;

exports[`Markdown should render links 1`] = `

<p class="rsg--para-11">
  a
  <a href="http://test.com"
     class="rsg--link-12"
  >
    link
  </a>
</p>

`;

exports[`Markdown should render mixed nested lists correctly 1`] = `

<ul class="rsg--list-31">
  <li class="rsg--li-33">
    list 1
  </li>
  <li class="rsg--li-33">
    list 2
    <ol class="rsg--list-31 rsg--ordered-32">
      <li class="rsg--li-33">
        Sub-list
      </li>
      <li class="rsg--li-33">
        Sub-list
      </li>
      <li class="rsg--li-33">
        Sub-list
      </li>
    </ol>
  </li>
  <li class="rsg--li-33">
    list 3
  </li>
</ul>

`;

exports[`Markdown should render ordered lists correctly 1`] = `

<ol class="rsg--list-31 rsg--ordered-32">
  <li class="rsg--li-33">
    list
  </li>
  <li class="rsg--li-33">
    item
  </li>
  <li class="rsg--li-33">
    three
  </li>
</ol>

`;

exports[`Markdown should render unordered lists correctly 1`] = `

<ul class="rsg--list-31">
  <li class="rsg--li-33">
    list
  </li>
  <li class="rsg--li-33">
    item
  </li>
  <li class="rsg--li-33">
    three
  </li>
</ul>

`;
